Code quality cleanup in NeverDestroyed https://bugs.webkit.org/show_bug.cgi?id=194824

Reviewed by Yusuke Suzuki.

First, move data members to the end of the class per WebKit
style. Also, add forbid heap allocation since we expect the
NeverDestroyed classes to be static.

* wtf/NeverDestroyed.h:


Canonical link: https://commits.webkit.org/209195@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241770 268f45cc-cd09-0410-ab3c-d52691b4dbfc